<resources>
    <string name="app_name">Gold Card Program</string>
    <string name="logo_school">Fremont-Mills Logo</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="password_reset_text">Forgot Password?</string>
    <string name="register_account_text">Request Account</string>
    <string name="program_motto">Knights Take Charge</string>
    <string name="starter">We Are...</string>
    <string name="respectful">WE ARE RESPECTFUL</string>
    <string name="responsible">WE ARE RESPONSIBLE</string>
    <string name="safe">WE ARE SAFE</string>
    <string name="radio_respectful">Respectful</string>
    <string name="radio_safe">Safe</string>
    <string name="radio_responsible">Responsible</string>
    <string name="gc_form_header">Submit Student For Gold Card Below</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="student_id_number">Student ID Number</string>
    <string name="date">Date</string>
    <string name="submitted_by">Submitted By</string>
    <string name="radio_label">For Being:</string>
    <string name="button_submit">Submit</string>
    <string name="button_reset">Reset</string>
    <string name="add_user_header_text">Add New User</string>
    <string name="employee_ID">Employee ID #</string>
    <string name="email_user">User Email Address</string>
    <string name="job_title">Job Title</string>
    <string name="button_add_user">Add User</string>
    <string name="add_student_header_text">Add New Student</string>
    <string name="email_student">Student Email</string>
    <string name="email_guardian">Guardian\'s Email</string>
    <string name="grade_level">Grade Level</string>
    <string name="button_add_student">Add Student</string>
    <string name="raffle_header">Monthly Raffle Drawing</string>
    <string name="draw_winners_button_text">Draw Winners</string>
    <string name="save_results_button_text">Save Results</string>
    <string name="iv_header">*Click the Knight To Give a Gold Card*</string>
    <string name="database_search_header_text">Seach Gold Card Database</string>
    <string name="email">Email Address</string>
    <string name="button_search">Search</string>
    <string name="radio_student">Student</string>
    <string name="radio_employee">Employee</string>
    <string name="data_search_results_header_text">Databse Search Results</string>
    <string name="clear_results_button_text">Clear Results</string>
    <string name="data_search_again_button_text">Search Again</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_student">StudentActivity</string>

</resources>
